--- a/CSS/index.css
+++ b/CSS/index.css
@@ -106,14 +106,15 @@
   height: 400px;
 }
 .close {
-  background-image: url("https://image.flaticon.com/icons/png/128/148/148766.png");
+  background-image: url("https://image.flaticon.com/icons/png/128/32/32178.png");
   background-size: cover;
-  height: 22px;
-  width: 22px;
+  height: 18px;
+  width: 18px;
   cursor: pointer;
 }
 .close-fade {
   opacity: 0;
+  height: 0;
   transition: 1s ease-in-out;
 }
 html,
