--- a/Article/Article.less
+++ b/Article/Article.less
@@ -9,6 +9,7 @@
   background-color: white;
   position: relative;
   height: 50px;
+  transition: height 0.7s;
   overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
 
@@ -40,9 +41,29 @@
     background-color: white;
   }
 }
+@keyframes wobble{
+  0%{
+    transform: translate(0px)
+  }
+  25%{
+    transform: translate(-30px);
+  }
+  50%{
+    transform: translate(30px);
+  }
+  75%{
+    transform: translate(-30px)
+  }
+  100%{
+    transform: translate(0px)
+  }
+}
 
 .article-open {
-  height: 400px;
+  animation: wobble 0.3s 1;
+  height: 450px;
+  transition: 0.7s;
+  transition-delay: 0.6s;
 }
 
 .close{
